# sequin

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  PLAN.md  PRODUCT.md  README.md  RELEASE.md  _typos.toml  deny.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-20T02-18-24Z__crates-sequin-app-src-main-rs.md
crates/sequin-app/: Cargo.toml  Dioxus.toml
crates/sequin-app/assets/: icon.icns
crates/sequin-app/src/: main.rs  style.css
crates/sequin-cli/: Cargo.toml
crates/sequin-cli/src/: main.rs
crates/sequin-core/: Cargo.toml
crates/sequin-core/src/: apply.rs  arrange.rs  exif.rs  grouping.rs  hashing.rs  lib.rs  thumbs.rs  timeline.rs
fixtures/: expected_groups_archive1-2.json
